# tiny-os

./: Readme.md
tiny-kernel/: Cargo.toml  Linker.lld  Makefile  kernel_log.txt  lines.sh  t.lld
tiny-kernel/.cargo/: config.toml
tiny-kernel/iso_root/boot/: limine.conf  tiny-kernel
tiny-kernel/src/: allocator.rs  arch.rs  core.rs  hal.rs  logger.rs  main.rs
tiny-kernel/src/allocator/: kernel_memory.rs
tiny-kernel/src/arch/x86_64/: page_allocator.rs
tiny-kernel/src/boot/: mod.rs  x86_64.rs
tiny-kernel/src/boot/x86_64/: limine.rs
tiny-kernel/src/hal/: bios_info.rs  buddy_mem_manager.rs  framebuffer.rs  kernel_allocator.rs  page_allocator.rs  x86_64_page_allocator.rs
tiny-kernel/src/logger/: logging.rs  ring_buffer.rs
tiny-kernel/src/logger/graphycal/: bitmap_font.rs  mod.rs  writer.rs
tiny-kernel/src/logger/serial/: writer.rs
